--- a/package.json
+++ b/package.json
@@ -8,24 +8,40 @@
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
+  "expo": {
+    "packagerOpts": {
+      "sourceExts": [
+        "cjs"
+      ]
+    }
+  },
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
+    "@react-native-firebase/app": "~15.4.0",
+    "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.3",
+    "@reduxjs/toolkit": "^1.9.0",
     "expo": "~46.0.16",
     "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.14.0",
+    "formik": "^2.2.9",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-paper": "^4.12.5",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "@types/react-redux": "^7.1.24",
     "typescript": "~4.3.5"
   },
   "private": true
