--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@reduxjs/toolkit": "^1.9.0",
     "expo": "~46.0.16",
     "expo-font": "~10.2.0",
+    "expo-localization": "~13.1.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.14.0",
     "formik": "^2.2.9",
@@ -33,6 +34,8 @@
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-paper": "^4.12.5",
+    "react-native-paper-dates": "^0.9.2",
+    "react-native-select-dropdown": "^3.0.3",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0"
